--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   permission_handler: 11.3.1
   direct_dialer: 2.0.1
   flutter_native_splash: 2.4.4
+  shared_preferences: ^2.0.0
 
 dev_dependencies:
   flutter_test:
